--- a/.github/workflows/metrics.yml
+++ b/.github/workflows/metrics.yml
@@ -1,12 +1,10 @@
 name: Metrics
 on:
-  # Roda a cada 24 horas
+  # Atualiza todos os dias à meia-noite
   schedule: [{cron: "0 0 * * *"}]
-  # Permite rodar manual
+  # Permite rodar manualmente
   workflow_dispatch:
-  # Roda quando faz push na master/main
   push: {branches: ["master", "main"]}
-
 jobs:
   github-metrics:
     runs-on: ubuntu-latest
@@ -15,33 +13,27 @@ jobs:
     steps:
       - uses: lowlighter/metrics@latest
         with:
-          # Sua chave secreta
           token: ${{ secrets.METRICS_TOKEN }}
-
-          # Opções para deixar igual ao da sua referência
           user: Daniel-matheus02
           template: classic
-          base: header, activity, community, repositories, metadata
-          config_timezone: America/Sao_Paulo
           
-          # TEMA DARK (STEALTH)
-          config_theme: dark
+          # --- LIMPEZA DOS ZEROS ---
+          # Removi 'activity' e 'community' (onde estavam os zeros).
+          # Deixei 'header' (teu nome) e 'repositories' (resumo dos repos).
+          base: header, repositories
           
-          # O CALENDÁRIO 3D (ISOMÉTRICO) QUE VOCÊ GOSTOU
+          # Esconde dados específicos que costumam vir zerados ou ser técnicos demais
+          config_display: regular
+          
+          # --- O QUE MANTIVEMOS ---
+          
+          # 1. As Linguagens (Barra colorida)
+          plugin_languages: yes
+          plugin_languages_ignored: html, css # (Opcional) Ignora linguagens de marcação se quiseres focar em lógica
+          
+          # 2. O Calendário 3D
           plugin_isocalendar: yes
           plugin_isocalendar_duration: half-year
           
-          # LINGUAGENS DETALHADAS
-          plugin_languages: yes
-          plugin_languages_ignored: >-
-            html, css, tex, less, dockerfile, makefile, qmake, lex, cmake, shell,
-            gnuplot
-          plugin_languages_details: bytes-size, percentage
-          plugin_languages_limit: 8
-          plugin_languages_analysis_timeout: 15
-          
-          # HÁBITOS DE CODIFICAÇÃO
-          plugin_habits: yes
-          plugin_habits_facts: yes
-          plugin_habits_days: 14
-          plugin_habits_from: 200
+          # --- O QUE REMOVEMOS ---
+          # Removi o 'plugin_habits' que estava a dar o "Unexpected error".
