--- a/.github/workflows/metrics.yml
+++ b/.github/workflows/metrics.yml
@@ -15,15 +15,21 @@ jobs:
           user: Daniel-matheus02
           template: classic
           
-          # BASE: Apenas info essencial (cabeçalho e repositórios)
+          # Base e Configurações
           base: header, repositories
           config_display: regular
           
-          # LINGUAGENS: Configuração para mostrar TODAS as 11
+          # --- LINGUAGENS (ATUALIZADO) ---
           plugin_languages: yes
-          plugin_languages_limit: 15
+          plugin_languages_ignored: html, css # Podes remover esta linha se quiseres mostrar HTML/CSS
+          plugin_languages_limit: 20
           plugin_languages_threshold: 0%
+          plugin_languages_indepth: yes       # Procura em profundidade
+          plugin_languages_analysis_timeout: 15
+          plugin_languages_sections: most-used
+          plugin_languages_details: lines, percentage # Cria a lista
+          plugin_languages_colors: github
           
-          # CALENDÁRIO 3D
+          # --- CALENDÁRIO 3D ---
           plugin_isocalendar: yes
           plugin_isocalendar_duration: half-year
